--- a/income.html
+++ b/income.html
@@ -16,7 +16,7 @@
 </head>
 
 <body style="background-color: #5adaff;">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
         <div class="container-fluid">
             <a class="navbar-brand" href="./income.html">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,9 +55,9 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
-    <div class="container">
+    <div class="container mt-5">
         <label for="source">source: </label>
         <input type="text" id="source">
         <br>
@@ -65,8 +65,8 @@
         <input type="number" id="price">
         <br>
         <div class="form-check form-switch mb-3">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
-            <label class="form-check-label" for="flexSwitchCheckChecked">Income</label>
+            <input class="form-check-input" type="checkbox" role="switch" id="checkbox_id" checked onclick="checkbox_clicked()">
+            <label class="form-check-label" id="checkbox_label" for="checkbox">Income</label>
         </div>
         <button class="btn btn-dark" onclick="add()">Add</button>
     </div>
@@ -90,16 +90,26 @@
         <div class="sep">
             <span class="text-center fs-4 fw-bold">Total Income: </span>
             <span class="text-center fs-4 fw-bold">Total Expense: </span>
+            <span class="text-center fs-4 fw-bold">New Worth: </span>
         </div>
         <div class="sep">
             <span class="text-center fs-4 fw-bold" id="income" style="color: #398ea6">0</span>
-            <span class="text-center fs-4 fw-bold" id="Expense" style="color: #398ea6">0</span>
+            <span class="text-center fs-4 fw-bold" id="expense" style="color: #398ea6">0</span>
+            <span class="text-center fs-4 fw-bold" id="net" style="color: #398ea6">0</span>
         </div>
     </div>
     <div class="container">
-        <div id="myPlot" style="width:100%;max-width:700px"></div>
-        <button class="btn btn-primary" onclick="plot()">Plot</button>
+        <div id="myPlot_income" style="width:100%;max-width:700px"></div>
+        <!-- <button class="btn btn-primary" onclick="plot()">Plot</button> -->
     </div>
+    <div class="container">
+        <div id="myPlot_expense" style="width:100%;max-width:700px"></div>
+        <!-- <button class="btn btn-primary" onclick="plot()">Plot</button> -->
+    </div>
+    <!-- <div class="container">
+        <div id="myPlot_net" style="width:100%;max-width:700px"></div>
+    </div> -->
+    <!-- <button class="btn btn-primary" onclick="plot()">Plot</button> -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="new.js"></script>
 </body>
