removing values of source & price after adding

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <label for="source">source: </label>
         <input type="text" id="source">
         <br>
-        <label for="price">price: </label>
+        <label for="price">Amount: </label>
         <input type="number" id="price">
         <br>
         <div class="form-check form-switch mb-3">
