made switch cursor: pointer

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <input type="number" id="price">
         <br>
         <div class="form-check form-switch mb-3">
-            <input class="form-check-input" type="checkbox" role="switch" id="checkbox_id" checked onclick="checkbox_clicked()">
+            <input class="form-check-input" type="checkbox" role="switch" id="checkbox_id" style="cursor: pointer;" checked onclick="checkbox_clicked()">
             <label class="form-check-label" id="checkbox_label" for="checkbox">Income</label>
         </div>
         <button class="btn btn-dark" onclick="add()">Add</button>
@@ -113,5 +113,4 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="new.js"></script>
 </body>
-
 </html>
